# flashgeotext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  TODO  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-test-release.yaml  ci.yml  codeql-analysis.yml  docs_build_deploy.yml  python_build_test.yml
conda/: meta.yaml
docs/: discussion.md  geotext.md  index.md  lookup.md  overview.md  tut_toponym.md  usage.md
docs/img/: flashtext-diagram.drawio
examples/: example-1-basic-usage.ipynb  example-2-bring-your-own-data.ipynb
examples/data/: example-data-berlin-boroughs.json  example-data-berlin-districts.json
flashgeotext/: __init__.py  config.py  extractor.py  geotext.py  lookup.py  settings.py
flashgeotext/resources/: cities.json  countries.json  scripts.json
scripts/: Untitled.ipynb  build-docs.sh
tests/: conftest.py
tests/integration/: conftest.py  test_geotext_extractor.py
tests/unit/: conftest.py  test_dataprocessor.py  test_extract.py  test_extractor.py  test_geotext_extractor.py  test_lookup_data.py  test_lookup_data_pool.py
tutorials/: get_berlin_district_data.ipynb  get_city_data_from_geonames.ipynb  get_country_data.ipynb
